discussion/kv_engine/130973/130973_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39297: Correct magma VB doc count underflow

Currently the VB doc count can underflow for magma vBuckets when we
drop collections as we incorrectly track the number of items purged
during a collection erase (compaction). This happens because magma
can call the compactionCallback multiple times for a given key as
it may store old values for each keys until compaction cleans them
up.

Correct the doc count underflow by using the collection item count
stats instead of the diff stat calculated during the compaction. This
required postponing the deleting of the stats local doc until the
compaction runs for magma instead of deleting the stats local doc when
we flush the deletion of the collection.

Change-Id: I4cafecef4aecc528a399b9aec9dc95cd02bd5c36

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-07-06 15:20:01.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-07-06 15:22:34.000000000
Message: 
Patch Set 9:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-06 15:25:49.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29023/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29023/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4747/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3679/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4645/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4645/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12465/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12465/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25025/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/mock/mock_ep_bucket.h:22:10:
fatal error: "folly/Portability/GMock.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25025/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3201/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_ep_bucket.h:22:10: error: "folly/Portability/GMock.h" file not found [clang-diagnostic-error]
#include <folly/Portability/GMock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3201/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_ep_bucket.h:22:10:
error: "folly/Portability/GMock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3201/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4571/ : FAILURE

Compile error at [2020-07-06T15:20:57.961Z] ../kv_engine/engines/ep/tests/mock/mock_ep_bucket.h:22:10:
fatal error: folly/Portability/GMock.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4571/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1708/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
